# descry

./: README.org  main.py  pyproject.toml  pyproject.toml~  sweep.yaml
descry/: __init__.py  preprocess.py
tests/: test_descry.py
