[tool.poetry]
name = "descry"
version = "0.1.0"
description = ""
authors = ["David Freifeld <freifeld.david@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
torch = "^1.11.0"
torchvision = "^0.12.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
py-spy = "^0.3.11"
pytest = "^7.1.1"
pytest-watcher = "^0.2.3"
pdoc = "^11.0.0"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
